<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Farm App</string>
    <string name="choose_language" translatable="false">Choose Language</string>
    <string name="location">Location</string>
    <string name="today_weather">Todays Weather: </string>
    <string name="tomorrow_weather">Tomorrows Weather: </string>
    <string name="soil_info">Soil Info</string>
    <string name="enter_land_area">Enter Land Area</string>
    <string name="enter_last_crops">Enter Last 2 Crops</string>
    <string name="soil_moisture" tools:ignore="MissingTranslation">Moisture: 23%</string>
    <string name="soil_ph" tools:ignore="MissingTranslation">pH : 7.5</string>
    <string name="soil_type" tools:ignore="MissingTranslation">Sandy Soil</string>
    <string name="soil_temperature" tools:ignore="MissingTranslation">Temperature : 34</string>

    <string name="cropRecommendation" tools:ignore="MissingTranslation">Crop Recommendation</string>
    <string name="crDetail" tools:ignore="MissingTranslation">Best Crop For Your Soil</string>
    <string name="disease" tools:ignore="MissingTranslation">Disease Detection</string>
    <string name="diseasDetail" tools:ignore="MissingTranslation">Detect Disease From Your Camera</string>
    <string name="farmerCommunity" tools:ignore="MissingTranslation">Farmers Community</string>
    <string name="CommunityDetails" tools:ignore="MissingTranslation">Get Close With Your Fellow Farmer</string>
    <string name="StrtBtn" tools:ignore="MissingTranslation">Start</string>

    <string name="soil_fertility" tools:ignore="MissingTranslation">Fertility : 78</string>
    <string name="no_soil_data" tools:ignore="MissingTranslation">No soil data</string>
    <string name="soil_error" tools:ignore="MissingTranslation">Error fetching soil data</string>
</resources>
